qlc/cpp/ql.h

  /* utilities */
  const char *DLLEXPORT qlVersion();
  const char *DLLEXPORT qlBoostVersion();
  void DLLEXPORT qlFreeString(char *p);